upgrade to java 25 and update dependencies to the latest